--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@
 /* Custom Font */
 @font-face {
     font-family: 'Yosugara';
-    src: url('fonts/yosugaraver1_2.ttf') format('truetype'),
-         url('./fonts/yosugaraver1_2.ttf') format('truetype');
+    src: url('./fonts/yosugaraver1_2.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
